<resources>
    <string name="app_name">WardrobeMan</string>
    <string name="detect_object">Detect Object</string>

    <string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="tv_askuser">Is this %1$s?</string>
    <string name="tv_widget_info">You have %1$d items in your wardrobe </string>
    <string-array name="labels_array">
        <item>flipflops</item>
        <item>gown</item>
        <item>kurta</item>
        <item>polo</item>
        <item>shirt</item>
        <item>shoe</item>
        <item>summerdress</item>
        <item>top</item>
        <item>tshirt</item>
        <item>white_shirt</item>
    </string-array>
    <string name="appwidget_text">You have 0 items in your closet</string>
    <string name="appwidget_text_click_toupload">Click to upload more</string>

    <string name="add_widget">Add widget</string>

    <string name="placeholder_label">This is</string>
    <string name="button_upload">UPLOAD</string>
    <string name="button_notreally">NOT REALLY</string>
    <string name="button_yes">YES</string>
    <string name="label_capturedimage">Displaying camera captured image</string>
    <string name="label_itemsOption">Asking user to choose the right category for the item</string>
    <string name="label_uploadData">Upload the image to database with the corrected category</string>
    <string name="label_askingUser">Asking user if the predicted label is correct or not</string>
    <string name="label_yes">Proceed</string>
    <string name="label_no">No, the predicted label is incorrect</string>
    <string name="label_takePicture">Camera is open so take picture</string>
    <string name="label_openCamera">Open camera to take picture</string>
    <string name="label_wardrobeItem">Individual wardrobe item</string>

</resources>
