<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:paddingBottom="50dp"
    tools:context=".Fragments.AddItemFragment">

    <ImageView
        android:id="@+id/imgCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="150dp"
        android:transitionName="cameraImage"
        android:contentDescription="@string/label_capturedimage"

        
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:id="@+id/llShowSpinner"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvText"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/placeholder_label"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_itemsOption"
                android:id="@+id/spinLabels"/>

        </LinearLayout>



        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/btnUserUpload"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_upload"
            android:contentDescription="@string/label_uploadData"
            android:background="@color/colorPrimary"
            android:textColor="#fff"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/llAskUser"
        >
    <TextView
        android:id="@+id/tvAskUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:contentDescription="@string/label_askingUser"
        tools:text="Is this shirt? " />

    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="2">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:contentDescription="@string/label_yes"
            android:text="@string/button_yes"
            />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/label_no"

            android:textColor="#fff"
            android:text="@string/button_notreally"
           />
    </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:id="@+id/progressUserUpload"/>
</RelativeLayout>